infra/modules/k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-for-lb-on-autopilot
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
