infra/modules/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-autopilot
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gke-ip
spec:
  defaultBackend:
    service:
      name: nodeport-for-lb-on-autopilot
      port:
        number: 80
